--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "audio-react-recorder": "^1.0.4",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-countdown-circle-timer": "^2.5.4",
