--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "recharts": "^2.1.6",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
