--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
     "audio-react-recorder": "^1.0.4",
+    "aws-sdk": "^2.1044.0",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "moment": "^2.29.1",
