--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.1044.0",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "node-sass": "^6.0.1",
