--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "react-toastify": "^8.1.0",
     "recharts": "^2.1.6",
     "redux": "^4.1.1",
